Fixed main content alignment, gallery styles

--- a/themes/zooberry/assets/css/cards.css
+++ b/themes/zooberry/assets/css/cards.css
@@ -1,6 +1,6 @@
 .box-card-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     margin: 0;
     padding: 0;
     list-style: none;
@@ -10,7 +10,7 @@
 .box-card-mods {
     background-color: var(--primary-bg);
     outline: 1px solid var(--secondary-border);
-    border-radius: 3px;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s, transform 2s;
     /* outline-offset: -1px; */
@@ -37,7 +37,7 @@
     display: block;
     width: 100%;
     height: auto;
-    border-radius: 3px 3px 0 0;
+    border-radius: 5px 5px 0 0;
 }
 
 .box-card-mods-img img {
