--- a/themes/zooberry/assets/css/galleria.twelve.css
+++ b/themes/zooberry/assets/css/galleria.twelve.css
@@ -4,7 +4,7 @@
     position: relative;
     overflow: hidden;
     font: 11px/1.4 arial,sans-serif;
-    color: #fff;
+    color: var(--font-color);
     border-radius: 5px;
 }
 .galleria-theme-twelve img {
@@ -28,7 +28,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    background: #2d323f;
+    background-color: var(--secondary-bg);
     z-index: 3;
 }
 .galleria-theme-twelve.light .galleria-bar{background:#fff;height:30px;;}
@@ -58,16 +58,13 @@
     left: auto;
 }
 .galleria-theme-twelve .galleria-progress {
-    height: 2px;
+    height: 5px;
     position: absolute;
     top: 0;
     left: 0;
     width: 0;
-    background: #b74747;
-    opacity: .5;
+    background: var(--accent-bg);
     z-index: 3;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-    filter: alpha(opacity=50);
 }
 
 .galleria-theme-twelve .galleria-thumblink,
@@ -180,13 +177,13 @@
     left: 70px;
     right: 70px;
     bottom: 1px;
-    color: #bbb;
+    color: var(--font-color);
 }
 .galleria-theme-twelve.light .galleria-info{color:#888;}
 .galleria-theme-twelve .galleria-info > *,
 .galleria-theme-twelve .galleria-info-text > * { display: inline }
 .galleria-theme-twelve .galleria-info-title {
-    color: #fff;
+    color: var(--font-color);
     font-weight: bold;
     padding: 0 10px;
 }
@@ -299,8 +296,9 @@
 /* GALLERIA */
 
 .galleria { 
-    width: 100%; 
-    height: 500px; 
+    width: 100%;
+    height: 60vh;
+    min-height: 500px;
     margin-bottom: 1rem;
 }
 
@@ -354,4 +352,16 @@ div.galleria-lightbox-close:hover {
 }
 
 div.galleria-thumbnails-container-zb {
+}
+
+.galleria-theme-twelve .galleria-progress {
+    opacity: 1;
+}
+
+div.galleria-s1, div.galleria-s2, div.galleria-s3, div.galleria-s4 {
+    display: none;
+}
+
+div.galleria-theme-twelve div.galleria-counter {
+    background: none;
 }
